# stockport-model

./: .dockerignore  .env.example  .gitignore  Dockerfile  HOSTING_HANDOFF.md  README.md  alembic.ini  launch_stockport_viewer.command  launch_stockport_viewer_lan.command  launch_stockport_viewer_lan_read_only.command  launch_stockport_viewer_public_beta.command  launch_stockport_viewer_public_read_only.command  launch_stockport_viewer_read_only.command  pyproject.toml  render.yaml
alembic/: env.py
config/: __init__.py  age_curves.json  archetype_weights.json  club_profile.json  composite_action_tiers.json  fbref_leagues.json  gate_thresholds.json  hard_gates.json  leagues.json  on_pitch_dashboard.json  on_pitch_physical_profiles.json  on_pitch_primary_metrics.json  on_pitch_profiles.json  projection_heuristics.json  role_profile_rules.json  role_templates.json  score_calibration.json  settings.py  skillcorner_leagues.json  transfermarkt_leagues.json
data/: README.md  availability_risk_model.joblib  championship_projection_model.joblib
db/: __init__.py  init_db.py  read_cache.py  schema.py  seed_reference_data.py  session.py
docs/: 404.html  index.html  longlist.html
features/: availability.py  confidence.py  gbe.py  league_adjust.py  opposition.py  per90.py  role_classification.py  rolling.py  skillcorner.py  trajectory.py
gates/: __init__.py  filtering.py
governance/: __init__.py  pipeline.py  prepare_live_pipeline.py
ingestion/: api_football.py  backfill_player_profiles.py  common.py  fbref.py  import_legacy_raw_stats.py  matching.py  run_daily_ingest.py  (+3 more)
(+123 files in other folders)
